<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="capstone.client.Fragments.EditInfoFragment"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_edit_info"
        android:textSize="@dimen/title_bar"
        android:gravity="center"
        android:textColor="@color/white"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:src="@drawable/white_user_2"
            android:id="@+id/imageView"
            android:layout_marginTop="30dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:layout_height="50dp"
                android:layout_width="200dp"
                android:layout_gravity="center_horizontal|center"
                android:layout_centerInParent="true"
                android:inputType="textNoSuggestions"
                android:ems="10"
                android:id="@+id/etSoldierId"
                android:hint="@string/id_text_edit"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textColorHint="@color/hint"
                android:clickable="false"
                android:cursorVisible="false"
                android:textCursorDrawable="@null"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:selectAllOnFocus="true"
                android:gravity="center_horizontal|center"
                android:longClickable="true"
                android:background="@null"
                />

            <ImageButton
                app:srcCompat="@drawable/ic_edit_2"
                android:id="@+id/edit_data"
                android:backgroundTint="@color/bg"
                android:onClick="edit_fields"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignTop="@+id/etSoldierId"
                android:layout_toRightOf="@+id/etSoldierId"
                android:layout_toEndOf="@+id/etSoldierId"
                android:layout_marginLeft="12dp"
                android:layout_marginStart="12dp" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:layout_height="50dp"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/etAge"
                android:layout_weight="1"
                android:hint="@string/age_text_edit"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textColorHint="@color/hint"
                android:clickable="false"
                android:cursorVisible="false"
                android:textCursorDrawable="@null"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:visibility="visible"
                android:layout_gravity="center"
                android:layout_width="200dp"
                android:background="@null"
                android:layout_centerInParent="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yrs"
                android:ems="10"
                android:layout_centerVertical="true"
                android:layout_alignStart="@+id/etAge"
                android:layout_marginStart="157dp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:layout_height="50dp"
                android:inputType="numberDecimal"
                android:ems="10"
                android:id="@+id/etWeight"
                android:layout_weight="1"
                android:hint="@string/weight_text_edit"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textColorHint="@color/hint"
                android:clickable="false"
                android:cursorVisible="false"
                android:textCursorDrawable="@null"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:layout_gravity="center"
                android:layout_width="200dp"
                android:layout_centerInParent="true"
                android:background="@null"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kgs"
                android:ems="10"
                android:layout_centerVertical="true"
                android:layout_alignStart="@+id/etWeight"
                android:layout_marginStart="157dp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:layout_height="50dp"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/etHeight"
                android:layout_weight="1"
                android:hint="@string/height_text_edit"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textColorHint="@color/hint"
                android:clickable="false"
                android:cursorVisible="false"
                android:textCursorDrawable="@null"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:layout_gravity="center"
                android:layout_width="200dp"
                android:background="@null"
                android:layout_centerInParent="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cm"
                android:ems="10"
                android:layout_alignBaseline="@+id/etHeight"
                android:layout_alignStart="@+id/etHeight"
                android:layout_marginStart="157dp" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <Button
            android:text="@string/edit_info_save_btn"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:id="@+id/btSave"
            android:layout_weight="1"
            android:textColor="@color/bg"
            android:background="@drawable/btn_save_cancel"
            android:visibility="invisible"
            android:onClick="edit_info_save"/>

        <Button
            android:text="Cancel"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:id="@+id/btCancel"
            android:layout_weight="1"
            android:visibility="invisible"
            android:onClick="cancel_info"
            android:textColor="@color/black"
            android:background="@drawable/btn_save_cancel"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_gravity="bottom|right"
        android:layout_height="match_parent"
        android:gravity="right">

        <ImageButton
            android:layout_gravity="right|bottom"
            app:srcCompat="@drawable/ic_help"
            android:id="@+id/helpButton"
            android:background="@color/black"
            android:onClick="callHelpPage"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp" />
    </LinearLayout>


</LinearLayout>
