<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="capstone.client.Fragments.SkinTempFragment"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_top"
        android:textSize="@dimen/title_bar"
        android:gravity="center"
        android:textColor="@color/white"/>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/white_line"
        android:layout_marginBottom="5dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/menu_skin_temp"
            android:tint="@color/white"
            android:layout_weight="0"
            android:layout_marginLeft="5dp"
            android:paddingTop="5dp"
            />

        <TextView
            android:id="@+id/currentSkinTemp"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="fill"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="13dp"
            android:paddingTop="5dp"
            android:text=""
            android:textColor="@color/white"
            android:textSize="35sp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_gravity="bottom|center_vertical"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:text="@string/graph_celsius"
            android:textColor="@color/white"
            android:textSize="25sp" />


        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/setting_large"
            android:id="@+id/settingsBtn"
            android:paddingTop="8dp"
            android:background="@color/bg"
            android:layout_gravity="right"
            android:onClick="edit_info"
            android:layout_weight="0"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/chartLayout">
        <TextView
            android:layout_width="match_parent"
            android:id="@+id/chartLabel"
            android:layout_height="wrap_content"
            android:text="@string/graph_title"
            android:textColor="@color/white"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="35dp"
            android:textSize="20sp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1">
            <capstone.client.ViewTools.VerticalTextView
                android:text="@string/graph_skin_yAxis"
                android:id="@+id/yAxisLabel"
                android:layout_height="match_parent"
                android:layout_marginTop="0dp"
                android:layout_marginLeft="5dp"
                android:paddingTop="0dp"

                android:textAlignment="center"
                android:textColor="@color/white"
                android:maxLines="2"

                android:layout_width="wrap_content"
                android:gravity="bottom|start" />
            <capstone.client.ViewTools.LineChartWithBackground
                android:id="@+id/skinTempChart"
                android:layout_width="325dp"
                android:layout_height="275dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="5dp" />
        </LinearLayout>

        <TextView
            android:id="@+id/xAxisLabel"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="fill"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="0dp"
            android:layout_weight="1"
            android:paddingTop="5dp"
            android:text="@string/graph_xAxis"
            android:textAlignment="center"
            android:textColor="@color/white" />
    </LinearLayout>
</LinearLayout>
